--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
