--- a/asdasd.ipynb
+++ b/asdasd.ipynb
@@ -723,7 +723,7 @@
    "outputs": [],
    "source": [
     "def letter(prediction):\n",
-    "         letters={i: chr(ord('a') + i) for i in range(26)}\n",
+    "         letters={i: chr(ord('A') + i) for i in range(26)}\n",
     "    \n",
     "         return letters[prediction]"
    ]
