done the GUI part to display the Accuracy and Preicision

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import required libraries\n",
     "import numpy as np\n",
@@ -23,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import train_test_split"
@@ -31,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +230,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +279,7 @@
        "Name: 23, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +345,7 @@
        "RandomForestClassifier(max_depth=100, min_samples_split=50, random_state=5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,24 +413,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.8366554054054054\n"
+      "Validation Accuracy: 0.8366554054054054\n",
+      "0.8371317949929462\n"
      ]
     }
    ],
    "source": [
-    "print(\"Validation Accuracy: \" + str(accuracy_score(y_test, y_pred)))"
+    "print(\"Validation Accuracy: \" + str(accuracy_score(y_test, y_pred)))\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +493,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +513,7 @@
        "array([0.83255912, 0.83298142, 0.83002534, 0.83368525, 0.83163229])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,65 +524,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# image = cv2.imread(\"m.png\")\n",
-    "\n",
-    "\n",
-    "# image = cv2.resize(image, (28, 28))\n",
-    "\n",
-    "\n",
-    "# image_gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "# flipped_image = cv2.flip(image_gray, 1)\n",
-    "\n",
-    "# image_rotated = cv2.rotate(flipped_image, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
-    "\n",
-    "# npImage = np.array(image_rotated).flatten()\n",
-    "\n",
-    "\n",
-    "# npImage = npImage.reshape(1, -1)  # Reshape to (1, 784) assuming it's a single image\n",
-    "\n",
-    "# imgList = [npImage]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[13]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "# predictions = clf.predict(npImage)\n",
-    "# print(predictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  warnings.warn(\n",
+      "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
       "c:\\Users\\Amir\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
@@ -656,7 +601,10 @@
     "    text_entry.insert(0, alphabetical_predictions)  # Insert prediction result\n",
     "\n",
     "    \n",
-    "    # root.update_idletasks()\n",
+    "    # Update additional message with information\n",
+    "    message_entry_accuracy.config(text=f\"Validation Accuracy: {str(accuracy_score(y_test, y_pred))}\")  # Update text of Message widget\n",
+    "    message_entry_precision.config(text=f\"Validation Precision: {str(precision_score(y_test, y_pred, average='weighted'))}\")  # Update text of Message widget\n",
+    "\n",
     "\n",
     "# Create the main application window\n",
     "root = tk.Tk()\n",
@@ -675,6 +623,12 @@
     "# filename_string = tk.StringVar() # String variable to hold the filename\n",
     "text_entry = tk.Entry(root)\n",
     "text_entry.pack(pady=10)\n",
+    "\n",
+    "message_entry_accuracy = tk.Message(root, width=300)\n",
+    "message_entry_accuracy.pack(pady=10)\n",
+    "\n",
+    "message_entry_precision = tk.Message(root, width=300)\n",
+    "message_entry_precision.pack(pady=10)\n",
     "\n",
     "# Start the Tkinter event loop\n",
     "root.mainloop()\n"
