--- a/ann.ipynb
+++ b/ann.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e88681fc",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2dab0ae1",
    "metadata": {},
    "outputs": [
@@ -760,8 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "55793dce",
+   "execution_count": 9,
+   "id": "d9463947",
    "metadata": {},
    "outputs": [
     {
@@ -778,10 +778,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "d36f5354",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step\n",
+      "[0]\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
